Fix FileProvider Authority collisions between variants

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,7 @@ android {
             buildConfigField "String", "WS_GRAPHQL_URL", "\"wss://giraffe.hedvig.com/subscriptions\""
             buildConfigField "String", "BASE_URL", "\"https://giraffe.hedvig.com\""
             buildConfigField "String", "REFERRALS_LANDING_BASE_URL", "\"https://www.hedvig.com/referrals/\""
+            resValue "string", "file_provider_authority", "\"com.hedvig.android.file.provider\""
 
             minifyEnabled true
             shrinkResources true
@@ -82,6 +83,7 @@ android {
             buildConfigField "String", "WS_GRAPHQL_URL", "\"wss://graphql.dev.hedvigit.com/subscriptions\""
             buildConfigField "String", "BASE_URL", "\"https://graphql.dev.hedvigit.com\""
             buildConfigField "String", "REFERRALS_LANDING_BASE_URL", "\"https://hedvig-web-onboarding-staging.herokuapp.com/referrals/\""
+            resValue "string", "file_provider_authority", "\"com.hedvig.android.test.file.provider\""
 
             minifyEnabled true
             shrinkResources true
@@ -96,6 +98,8 @@ android {
             buildConfigField "String", "WS_GRAPHQL_URL", "\"wss://graphql.dev.hedvigit.com/subscriptions\""
             buildConfigField "String", "BASE_URL", "\"https://graphql.dev.hedvigit.com\""
             buildConfigField "String", "REFERRALS_LANDING_BASE_URL", "\"https://hedvig-web-onboarding-staging.herokuapp.com/referrals/\""
+
+            resValue "string", "file_provider_authority", "\"com.hedvig.android.dev.file.provider\""
 
             debuggable true
         }
