--- a/app/build.gradle
+++ b/app/build.gradle
@@ -132,7 +132,6 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
 
     // Android support
-    def support_version = "28.0.0"
     implementation 'androidx.appcompat:appcompat:1.0.2'
     implementation 'androidx.exifinterface:exifinterface:1.0.0'
     implementation 'androidx.media:media:1.0.1'
@@ -164,36 +163,32 @@ dependencies {
     androidTestImplementation "com.apollographql.apollo:apollo-espresso-support:$apollo_version"
 
     // Firebase
-    implementation 'com.google.android.gms:play-services-base:16.1.0'
-    releaseImplementation 'com.crashlytics.sdk.android:crashlytics:2.10.0'
-    stagingImplementation 'com.crashlytics.sdk.android:crashlytics:2.10.0'
+    implementation 'com.google.android.gms:play-services-base:17.0.0'
+    releaseImplementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
+    stagingImplementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
 
-    implementation "com.google.firebase:firebase-core:16.0.9"
-    implementation "com.google.firebase:firebase-dynamic-links:17.0.0"
-    implementation "com.google.firebase:firebase-firestore:19.0.0"
-    implementation 'com.google.firebase:firebase-config:17.0.0'
-    implementation "com.google.firebase:firebase-messaging:18.0.0"
-
-    // Segment
-    implementation 'com.google.android.gms:play-services-ads:15.0.1'
+    implementation "com.google.firebase:firebase-core:17.0.1"
+    implementation "com.google.firebase:firebase-dynamic-links:18.0.0"
+    implementation "com.google.firebase:firebase-firestore:20.2.0"
+    implementation 'com.google.firebase:firebase-config:18.0.0'
+    implementation "com.google.firebase:firebase-messaging:19.0.1"
 
     // Koin
-    def koin_version = "2.0.0-GA"
+    def koin_version = "2.0.1"
     implementation "org.koin:koin-android:$koin_version"
     implementation "org.koin:koin-android-viewmodel:$koin_version"
 
     implementation 'net.ypresto.timbertreeutils:timbertreeutils:1.0.0'
 
-    def navigation_version = '1.0.0'
-    implementation 'androidx.navigation:navigation-fragment:2.0.0-rc02'
-    implementation 'androidx.navigation:navigation-ui:2.0.0-rc02'
-    implementation 'androidx.navigation:navigation-runtime-ktx:2.0.0-rc02'
+    implementation 'androidx.navigation:navigation-fragment:2.1.0-beta02'
+    implementation 'androidx.navigation:navigation-ui:2.1.0-beta02'
+    implementation 'androidx.navigation:navigation-runtime-ktx:2.1.0-beta02'
 
     // Timber
     implementation 'com.jakewharton.timber:timber:4.7.1'
 
     // Lottie
-    implementation "com.airbnb.android:lottie:2.5.5"
+    implementation "com.airbnb.android:lottie:3.0.7"
 
     // Exoplayer
     implementation 'com.google.android.exoplayer:exoplayer:2.7.3'
