--- a/app/build.gradle
+++ b/app/build.gradle
@@ -96,7 +96,6 @@ android {
 }
 
 dependencies {
-
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     implementation 'io.reactivex.rxjava2:rxkotlin:2.3.0'
     implementation 'nl.littlerobots.rxlint:rxlint:1.7.3'
@@ -105,21 +104,20 @@ dependencies {
     implementation 'com.google.android.material:material:1.0.0'
 
     // Android support
-    implementation 'androidx.appcompat:appcompat:1.1.0-rc01'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.exifinterface:exifinterface:1.0.0'
-    implementation 'androidx.media:media:1.0.1'
+    implementation 'androidx.media:media:1.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.dynamicanimation:dynamicanimation:1.0.0'
 
     // Android lifecycle
-    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0'
-    kapt 'androidx.lifecycle:lifecycle-compiler:2.0.0'
-
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
+    implementation 'androidx.lifecycle:lifecycle-common-java8:2.1.0'
 
     // WorkManager
-    def workmanager_version = "2.1.0"
+    def workmanager_version = "2.2.0"
     implementation "androidx.work:work-runtime:$workmanager_version"
     implementation "androidx.work:work-runtime-ktx:$workmanager_version"
 
@@ -135,15 +133,14 @@ dependencies {
     androidTestImplementation "com.apollographql.apollo:apollo-espresso-support:$apollo_version"
 
     // Firebase
-    implementation 'com.google.android.gms:play-services-base:17.0.0'
+    implementation 'com.google.android.gms:play-services-base:17.1.0'
     releaseImplementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
     stagingImplementation 'com.crashlytics.sdk.android:crashlytics:2.10.1'
 
-    implementation "com.google.firebase:firebase-core:17.0.1"
-    implementation "com.google.firebase:firebase-dynamic-links:18.0.0"
-    implementation "com.google.firebase:firebase-firestore:20.2.0"
-    implementation 'com.google.firebase:firebase-config:18.0.0'
-    implementation "com.google.firebase:firebase-messaging:19.0.1"
+    implementation "com.google.firebase:firebase-core:17.2.0"
+    implementation "com.google.firebase:firebase-dynamic-links:19.0.0"
+    implementation 'com.google.firebase:firebase-config:19.0.1'
+    implementation "com.google.firebase:firebase-messaging:20.0.0"
 
     // Koin
     def koin_version = "2.0.1"
