--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
             android:launchMode="singleTask"
             android:noHistory="true"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.Exponent.Splash"
+            android:theme="@style/Hedvig.Theme.Splash"
             android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -35,9 +35,11 @@
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
+
                 <category android:name="android.intent.category.DEFAULT" />
 
                 <category android:name="android.intent.category.BROWSABLE" />
+
                 <data android:scheme="@string/APP_SCHEME" />
             </intent-filter>
             <intent-filter android:autoVerify="true">
@@ -196,7 +198,7 @@
             android:noHistory="true"
             android:parentActivityName=".SplashActivity"
             android:screenOrientation="portrait"
-            android:theme="@style/Theme.Exponent.Splash"
+            android:theme="@style/Hedvig.Theme.Splash"
             android:windowSoftInputMode="adjustResize" />
         <activity
             android:name=".LoggedInTerminatedActivity"
@@ -231,6 +233,7 @@
             </intent-filter>
         </service>
     </application>
+
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
