--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,9 +101,7 @@ dependencies {
     implementation 'nl.littlerobots.rxlint:rxlint:1.7.3'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
-    implementation 'com.google.android.material:material:1.0.0'
-
-    // Android support
+    // AndroidX
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.exifinterface:exifinterface:1.0.0'
     implementation 'androidx.media:media:1.1.0'
@@ -111,6 +109,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.dynamicanimation:dynamicanimation:1.0.0'
+    implementation "androidx.preference:preference-ktx:1.1.0"
 
     // Android lifecycle
     implementation 'androidx.lifecycle:lifecycle-extensions:2.1.0'
