--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,10 +24,10 @@ android {
     androidExtensions {
         experimental = true
     }
-    compileSdkVersion 28
+    compileSdkVersion 29
 
     defaultConfig {
-        targetSdkVersion 28
+        targetSdkVersion 29
         applicationId 'com.hedvig'
 
         minSdkVersion 21
@@ -167,7 +167,7 @@ dependencies {
     implementation 'com.caverock:androidsvg-aar:1.3'
 
     // Restring
-    implementation 'com.hedvig.restring:restring:0.0.1'
+    implementation 'com.hedvig.restring:restring:1.1.0'
 
     // Glide
     implementation "com.github.bumptech.glide:glide:4.9.0"
@@ -182,8 +182,7 @@ dependencies {
     // test
     testImplementation 'junit:junit:4.12'
 
-    debugApi 'com.squareup.leakcanary:leakcanary-android:1.6.2'
-    releaseApi 'com.squareup.leakcanary:leakcanary-android-no-op:1.6.2'
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.0-beta-3'
 }
 
 apply plugin: 'com.google.gms.google-services'
