Fix bad theme on logged in terminated

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -223,7 +223,13 @@
             android:theme="@style/Hedvig.Theme.Splash"
             android:windowSoftInputMode="adjustResize" />
 
-        <activity android:name=".LoggedInTerminatedActivity" />
+        <activity
+            android:name=".LoggedInTerminatedActivity"
+            android:configChanges="keyboard|keyboardHidden|orientation|screenSize"
+            android:launchMode="singleTask"
+            android:screenOrientation="portrait"
+            android:theme="@style/Hedvig.Theme"
+            android:windowSoftInputMode="adjustResize" />
 
         <activity
             android:name=".feature.settings.SettingsActivity"
