--- a/app/build.gradle
+++ b/app/build.gradle
@@ -190,7 +190,7 @@ googleServices {
 apply plugin: 'com.hedvig.textkeys'
 
 textkeys {
-    graphqlEndpoint = 'https://api-euwest.graphcms.com/v1/cjmawd9hw036a01cuzmjhplka/master'
+    graphqlEndpoint = 'https://graphql.dev.hedvigit.com/graphql'
     defaultLanguageCode = rootProject.ext.defaultLanguage
     excludedLanguages = rootProject.ext.excludedLanguages
 }
